libs/node/test/data/SMSHOME2/bad/bad_ecfmicro.ecf


# Test that a replacement character should be specified for ecfmicro
 
%ecfmicro
 